[FEAT] Tests, CategoriaController
